fix(css): mobile overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@ body {
 }
 
 html,
-body {
+body,
+#root,
+._loading_overlay_wrapper {
   height: 100%;
 }
